--- a/JPMorgan.Assignment.SuperSimpleStocks/package.json
+++ b/JPMorgan.Assignment.SuperSimpleStocks/package.json
@@ -5,5 +5,12 @@
   "main": "app.js",
   "author": {
     "name": "Khalid Riaz"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "grunt": "^1.0.1",
+    "grunt-contrib-jshint": "^1.1.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "mocha": "^3.2.0"
   }
 }
