Stock module with unit tests.

--- a/JPMorgan.Assignment.SuperSimpleStocks/package.json
+++ b/JPMorgan.Assignment.SuperSimpleStocks/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jpmorgan.assignment.super-simple-stocks",
-  "version": "0.0.0",
-  "description": "JPMorgan.Assignment.SuperSimpleStocks",
+  "version": "0.0.1",
+  "description": "JPMorgan Assignment SuperSimpleStocks",
   "main": "app.js",
   "author": {
     "name": "Khalid Riaz"
