--- a/JPMorgan.Assignment.SuperSimpleStocks/package.json
+++ b/JPMorgan.Assignment.SuperSimpleStocks/package.json
@@ -12,5 +12,8 @@
     "grunt-contrib-jshint": "^1.1.0",
     "grunt-contrib-watch": "^1.0.0",
     "mocha": "^3.2.0"
+  },
+  "dependencies": {
+    "underscore": "^1.8.3"
   }
 }
